# routes/web.php
@@ -3,6 +3,7 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\SicCodeController;
 use App\Http\Controllers\StateController;
+use App\Http\Controllers\HostingController;
 
 /*
 |--------------------------------------------------------------------------
@@ -20,3 +21,5 @@ use App\Http\Controllers\StateController;
 Route::resource('api/sic_code', SicCodeController::class);
 
 Route::resource('api/state', StateController::class);
+
+Route::resource('api/hosting', HostingController::class);
